# guanaco-py

./: .gitmodules  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-release.yaml  build-cpu-wheel.yml  build-docker-image.yaml  build-release-publish.yaml  build-wheel-cpu.yml  build-wheels-cuda.yaml  build-wheels-metal.yaml  generate-index-from-release.yaml  test.yaml
docker/simple/: Dockerfile
examples/low_level_api/: common.py  low_level_api_chat_cpp.py
llama_cpp/: _internals.py  llama.py  llama_chat_format.py  llama_cpp.py  mtmd_cpp.py
scripts/: get-releases.sh  releases-to-pep-503.sh
tests/: test_llama.py
