[build-system]
requires = ["scikit-build-core[pyproject]>=0.9.2"]
build-backend = "scikit_build_core.build"

[project]
name = "guanaco-py"
dynamic = ["version"]
description = "Python bindings for the llama.cpp library"
readme = "README.md"
license = { text = "MIT" }

# Original llama-cpp-python author
authors = [
    { name = "Andrei Betlen", email = "abetlen@gmail.com" },
]

# This repo maintainer (me)
maintainers = [
    { name = "Green", email = "thebigeyedev@gmail.com" },
]

dependencies = [
    "typing-extensions>=4.8.0",
    "numpy>=1.21.6,<=2.3.2",
    "diskcache>=5.6.2",
    "jinja2>=2.11.3",
    "Pillow>=9.5.0",
]

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
server = [
    "uvicorn>=0.22.0",
    "fastapi>=0.100.0",
    "pydantic-settings>=2.0.1",
    "sse-starlette>=1.6.1",
    "starlette-context>=0.3.6,<0.4",
    "PyYAML>=5.1",
]
test = [
    "pytest>=7.4.0",
    "httpx>=0.24.1",
    "scipy>=1.10",
    "fastapi>=0.100.0",
    "sse-starlette>=1.6.1",
    "starlette-context>=0.3.6,<0.4",
    "pydantic-settings>=2.0.1",
    "huggingface-hub>=0.23.0"
]
dev = [
    "black>=23.3.0",
    "twine>=4.0.2",
    "mkdocs>=1.4.3",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-material>=9.1.18",
    "pytest>=7.4.0",
    "httpx>=0.24.1",
]
all = [
    "guanaco_py[server,test,dev]",
]

[tool.scikit-build]
wheel.packages = ["llama_cpp"]
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"
sdist.include = [".git", "vendor/llama.cpp/*"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "llama_cpp/__init__.py"

[project.urls]
Homepage = "https://github.com/TheBigEye/guanaco-py"
"Bug Reports" = "https://github.com/TheBigEye/guanaco-py/issues"
"Release Notes" = "https://github.com/TheBigEye/guanaco-py/releases"
"Forked from" = "https://github.com/abetlen/llama-cpp-python"

[tool.pytest.ini_options]
testpaths = "tests"
